--- a/frontend/manifest.yaml
+++ b/frontend/manifest.yaml
@@ -41,4 +41,4 @@ spec:
   - name: frontend-port
     protocol: TCP
     port: 80 # this is service port
-    targetport: 80 # this is container port. 
+    targetPort: 80 # this is container port. 
