--- a/mysql/manifest.yaml
+++ b/mysql/manifest.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Service 
 metadata:
   name: mysql-headless
+  namespace: expense
 spec:
   clusterIP:  None # for headless service there is no clusterIP
   selector:
@@ -11,7 +12,7 @@ spec:
   ports:
   - protocol: TCP
     port: 3306 # this is service port
-    targetport: 3306 # this is container port.
+    targetPort: 3306 # this is container port.
 ---
 apiVersion: v1
 kind: Service 
@@ -29,7 +30,7 @@ spec:
     targetport: 3306 # this is container port.
     
 ---
-apiVersion: v1
+apiVersion: apps/v1
 kind: StatefulSet
 metadata:
   name: mysql
